# rust-web-template

./: Cargo.toml
src/: config.rs  main.rs
