[package]
name = "rust-web-template"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
env_logger = "0.11.5"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
clap = { version = "4", default-features = false, features = [
    "derive",
    "std",
    "env",
    "help",
    "usage",
    "error-context",
    "suggestions",
] }
diesel = { version = "2.2.0", features = ["postgres"] }
actix-web = "4.9.0"
anyhow = "1.0.94"
